--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "edge.js": "^5.5.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.0",
     "nodemon": "^2.0.20",
     "swagger-ui-express": "^4.6.0",
     "yamljs": "^0.3.0"
